--- a/index.html
+++ b/index.html
@@ -3,18 +3,96 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pemesanan Online</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Order Pesanan</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f8f8f8;
+            margin: 0;
+            padding: 0;
+        }
+
+        .container {
+            max-width: 600px;
+            margin: 50px auto;
+            padding: 20px;
+            background-color: #fff;
+            border-radius: 8px;
+            box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+        }
+
+        h1 {
+            text-align: center;
+            color: #333;
+        }
+
+        label {
+            display: block;
+            margin-bottom: 8px;
+            font-weight: bold;
+        }
+
+        input, select, textarea, button {
+            width: 100%;
+            padding: 12px;
+            margin: 10px 0 20px 0;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            box-sizing: border-box;
+        }
+
+        button {
+            background-color: #4CAF50;
+            color: white;
+            cursor: pointer;
+            border: none;
+            font-size: 16px;
+        }
+
+        button:hover {
+            background-color: #45a049;
+        }
+
+        .footer {
+            text-align: center;
+            margin-top: 20px;
+            color: #888;
+        }
+
+        .footer a {
+            text-decoration: none;
+            color: #4CAF50;
+        }
+    </style>
 </head>
 <body>
-    <div class="container">
-        <h1>Form Pemesanan</h1>
-        <form action="order.php" method="POST">
-            <label for="nama">Nama Pemesan:</label>
-            <input type="text" id="nama" name="nama" required>
 
-            <label for="produk">Produk yang Dipesan:</label>
-            <select id="produk" name="produk" required>
-                <option value="produk1">Produk 1</option>
-                <option value="produk2">Produk 2</option>
-                <option value
+<div class="container">
+    <h1>Form Pemesanan</h1>
+    <form action="order-submit.html" method="POST">
+        <label for="nama">Nama Pemesan</label>
+        <input type="text" id="nama" name="nama" required placeholder="Masukkan nama lengkap">
+
+        <label for="produk">Pilih Produk</label>
+        <select id="produk" name="produk" required>
+            <option value="produk1">Produk 1</option>
+            <option value="produk2">Produk 2</option>
+            <option value="produk3">Produk 3</option>
+        </select>
+
+        <label for="jumlah">Jumlah</label>
+        <input type="number" id="jumlah" name="jumlah" required min="1" placeholder="Masukkan jumlah produk">
+
+        <label for="alamat">Alamat Pengiriman</label>
+        <textarea id="alamat" name="alamat" required placeholder="Masukkan alamat lengkap"></textarea>
+
+        <button type="submit">Pesan Sekarang</button>
+    </form>
+</div>
+
+<div class="footer">
+    <p>&copy; 2024 - Semua Hak Dilindungi. <a href="terms.html">Syarat dan Ketentuan</a></p>
+</div>
+
+</body>
+</html>
