--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
         <form id="order-form" class="order-form" onsubmit="submitOrder(event)">
             <label for="item">Pilih Menu:</label>
             <select id="item" name="item" onchange="updateHarga()">
-                <option value="kopi" data-price="30000">Kopi - Rp 30,000</option>
-                <option value="teh" data-price="15000">Teh - Rp 15,000</option>
-                <option value="jus" data-price="25000">Jus Buah - Rp 25,000</option>
-                <option value="kue" data-price="30000">Kue - Rp 30,000</option>
+                <option value="kopikenanganmantan" data-price="30000">Kopi Kenangan Mantan - Rp 30,000</option>
+                <option value="tehamba" data-price="15000">Teh Amba - Rp 15,000</option>
+                <option value="jusbuahzakar" data-price="25000">Jus Buah Zakar - Rp 25,000</option>
+                <option value="kuejepang" data-price="30000">Kue Jepang - Rp 30,000</option>
             </select>
 
             <label for="jumlah">Jumlah:</label>
