--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Orderan Kafe</title>
+    <title>Orderan D'Edge Coffee</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        <h1>Pemesanan Menu Kafe</h1>
+        <h1>Pemesanan Menu D'Edge Coffee</h1>
         <form id="order-form" class="order-form" onsubmit="submitOrder(event)">
             <label for="item">Pilih Menu:</label>
             <select id="item" name="item" onchange="updateHarga()">
