--- a/laporan.html
+++ b/laporan.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Laporan Orderan</title>
+    <title>Orderan D'Edge Coffee</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <h1>Laporan Orderan</h1>
+        <h1>Orderan D'Edge Coffee</h1>
         <div id="order-summary" class="order-summary">
             <p><strong>Menu:</strong> <span id="summary-item"></span></p>
             <p><strong>Jumlah:</strong> <span id="summary-jumlah"></span></p>
