--- a/index.html
+++ b/index.html
@@ -27,7 +27,16 @@
             <label for="total">Total Harga:</label>
             <input type="text" id="total" name="total" readonly>
 
-            <!-- <button type="button" onclick="hitungTotal()">Hitung Total</button> -->
+            <!-- Menambahkan menu Pilih Meja -->
+            <label for="meja">Pilih Meja:</label>
+            <select id="meja" name="meja">
+                <option value="1">Meja 1</option>
+                <option value="2">Meja 2</option>
+                <option value="3">Meja 3</option>
+                <option value="4">Meja 4</option>
+                <option value="5">Meja 5</option>
+            </select>
+
             <button type="submit">Pesan Sekarang</button>
         </form>
     </div>
