--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <select id="item" name="item" onchange="updateHarga()">
                 <option value="kopikenanganmantan" data-price="30000">Kopi Kenangan Mantan - Rp 30,000</option>
                 <option value="tehamba" data-price="15000">Teh Amba - Rp 15,000</option>
-                <option value="jusbuahzakar" data-price="25000">Jus Buah Zakar - Rp 25,000</option>
+                <option value="jusbuah" data-price="25000">Jus Buah - Rp 25,000</option>
                 <option value="kuejepang" data-price="30000">Kue Jepang - Rp 30,000</option>
             </select>
 
