--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pemesanan D'Edge Coffee</title>
     <link rel="stylesheet" href="style.css">
+
+    <!-- Tambahkan favicon di sini -->
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <!-- Atau jika menggunakan PNG, bisa gunakan ini -->
+    <!-- <link rel="icon" href="favicon.png" type="image/png"> -->
 </head>
 <body>
     <div class="container">
