--- a/laporan.html
+++ b/laporan.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Orderan D'Edge Coffee</title>
+    
+    <!-- Menambahkan favicon -->
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <!-- Jika favicon berupa PNG, gunakan ini -->
+    <!-- <link rel="icon" href="favicon.png" type="image/png"> -->
+
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
