--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
     <title>Pemesanan D'Edge Coffee</title>
     <link rel="stylesheet" href="style.css">
 
-    <!-- Tambahkan favicon di sini -->
+    <!-- favicon  -->
     <link rel="icon" href="favicon.ico" type="image/x-icon">
-    <!-- Atau jika menggunakan PNG, bisa gunakan ini -->
     <!-- <link rel="icon" href="favicon.png" type="image/png"> -->
 </head>
 <body>
